fixed routing bugs

--- a/templates/Admin/admin_doctor_create.html
+++ b/templates/Admin/admin_doctor_create.html
@@ -62,7 +62,7 @@
             <label for="about" class="form-label">About</label>
             <textarea class="form-control" id="about" name="about" rows="6" required
             placeholder="Give a brief description"
-            value="{{ about or '' }}"></textarea>
+            >{{ about or '' }}</textarea>
             </textarea>
         </div>
 
