--- a/templates/Patient/patient_deptdoc.html
+++ b/templates/Patient/patient_deptdoc.html
@@ -12,7 +12,7 @@
         <div class="col">
             <div class="card h-100 shadow-sm">
                 <div class="card-body">
-                    <h5 class="card-title">{{ doctor.name }}</h5>
+                    <h5 class="card-title">Dr. {{ doctor.name }}</h5>
                     <p class="card-text"><strong>Experience:</strong> {{ doctor.experience }} years</p>
                     <p class="card-text"><strong>About:</strong> {{ doctor.about }}</p>
                 </div>
