--- a/templates/Admin/admin_doctors.html
+++ b/templates/Admin/admin_doctors.html
@@ -8,11 +8,9 @@
     <a href="{{ url_for('admin.admin_create_doctor')}}" class="btn btn-primary">Add New Doctor</a>
 </div>
 
-<!-- Combined Search bar -->
 <form class="mb-4" method="GET" action="{{ url_for('admin.admin_doctors') }}">
     <div class="input-group">
 
-        <!-- Dropdown -->
         <select name="search_by" class="form-select" style="max-width: 180px;">
             <option value="name" {% if search_by == 'name'or search_by == '' %}selected{% endif %}>Doctor Name</option>
             <option value="department" {% if search_by == 'department' %}selected{% endif %}>Department</option>
@@ -26,28 +24,26 @@
             value="{{ query }}"
         >
 
-        <!-- Submit button -->
         <button type="submit" class="btn btn-secondary">Search</button>
 
     </div>
 </form>
 
 
-<!-- Doctors Table -->
 <table class="table table-striped table-hover">
     <thead class="table-dark ">
         <tr>
-            <th class="ps-4">Name</th>
-            <th>Department</th>
-            <th>Actions</th>
+            <th class="w-40 text-center">Name</th>
+            <th class="w-50 text-center">Department</th>
+            <th class="w-10 text-center">Actions</th>
         </tr>
     </thead>
     <tbody>
         {% for doctor in doctors %}
         <tr>
-            <td>{{ doctor.name }}</td>
-            <td>{{ doctor.department.name }}</td>
-            <td>
+            <td class="text-center">Dr. {{ doctor.name }}</td>
+            <td class="text-center">{{ doctor.department.name }}</td>
+            <td class="text-center">
                 <a href="{{url_for('admin.admin_doctors_edit', doctor_id=doctor.doctor_id)}}" class="btn btn-warning btn-sm">Edit</a>
                 <a href="{{ url_for('admin.admin_doctors_blacklist', doctor_id=doctor.doctor_id)}}" class="btn btn-sm 
                         {% if doctor.user.blacklisted %}btn-success{% else %}btn-secondary{% endif %}">
